--- a/beasiswa/templates/angkatan.html
+++ b/beasiswa/templates/angkatan.html
@@ -91,7 +91,7 @@
                     <td>{{ forloop.counter }}</td>
                     <td>{{ angkatan.angkatan }}</td>
                     <td>
-                        <a href="{% url 'edit_angkatan' angkatan.id %}" class="btn btn-warning">Edit</a>
+                        <a href="{% url 'edit_angkatan' angkatan.id %}" class="btn btn-warning btn-sm"><i class="bi bi-pencil"></i> Edit</a>
                         <form action="{% url 'delete_angkatan' angkatan.id %}" method="post" style="display:inline;">
                             {% csrf_token %}
                             <button type="submit" class="btn btn-danger btn-sm" onclick="return confirm('Apakah Anda yakin ingin menghapus data ini?');"><i class="bi bi-trash"></i> Hapus</button>
