menu kelola program studi

--- a/beasiswa/templates/partials/sidebar.html
+++ b/beasiswa/templates/partials/sidebar.html
@@ -10,6 +10,13 @@
       </li><!-- End Dashboard Nav -->
 
       <li class="nav-item">
+        <a class="nav-link collapsed" href="{% url 'prodi' %}">
+          <i class="bi bi-person"></i>
+          <span>Kelola Program Studi</span>
+        </a>
+      </li><!-- End Profile Page Nav -->
+
+      <li class="nav-item">
         <a class="nav-link collapsed" href="{% url 'angkatan' %}">
           <i class="bi bi-person"></i>
           <span>Kelola Angkatan</span>
