--- a/beasiswa/templates/prodi.html
+++ b/beasiswa/templates/prodi.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Kelola Mahasiswa - SIPB</title>
+  <title>Kelola Program Studi - SIPB</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -44,11 +44,11 @@
   <main id="main" class="main">
 
     <div class="pagetitle">
-      <h1>Kelola Mahasiswa</h1>
+      <h1>Kelola Program Studi</h1>
       <nav>
         <ol class="breadcrumb">
           <li class="breadcrumb-item"><a href="{% url 'home' %}">Beranda</a></li>
-          <li class="breadcrumb-item active">Kelola Mahasiswa</li>
+          <li class="breadcrumb-item active">Kelola Program Studi</li>
         </ol>
       </nav>
     </div><!-- End Page Title -->
@@ -65,7 +65,7 @@
         <div class="col-lg-12">
           <div class="card">
             <div class="card-body">
-                <button class="btn btn-primary mt-3"><a href="" style="color: white; text-decoration: ">Tambah Mahasiswa</a></button>
+                <button class="btn btn-primary mt-3"><a href="{% url 'tambah_prodi' %}" style="color: white; text-decoration: ">Tambah Program Studi</a></button>
             </div>
           </div>
         </div>
@@ -81,18 +81,31 @@
                 <thead>
                   <tr>
                     <th scope="col">No</th>
-                    <th scope="col">NIM</th>
-                    <th scope="col">Nama</th>
-                    <th scope="col">Prodi</th>
-                    <th scope="col">Angkatan</th>
+                    <th scope="col">Program Studi</th>
                     <th scope="col">Aksi</th>
                   </tr>
                 </thead>
                 <tbody>
-                 
+                  {% for prodi in data_prodi %}
+                  <tr>
+                    <td>{{ forloop.counter }}</td>
+                    <td>{{ prodi.prodi }}</td>
+                    <td>
+                        <a href="{% url 'edit_prodi' prodi.id %}" class="btn btn-warning btn-sm"><i class="bi bi-pencil"></i> Edit</a>
+                        <form action="{% url 'hapus_prodi' prodi.id %}" method="post" style="display:inline;">
+                            {% csrf_token %}
+                            <button type="submit" class="btn btn-danger btn-sm" onclick="return confirm('Apakah Anda yakin ingin menghapus data ini?');"><i class="bi bi-trash"></i> Hapus</button>
+                          </form>
+                    </td>
+                  </tr>
+                  {% empty %}
+                  <tr>
+                    <td colspan="3" class="text-center">Tidak ada data program studi.</td>
+                  </tr>
+                  {% endfor %}
                 </tbody>
               </table>
-              
+                            
               <!-- End Table with stripped rows -->
 
             </div>
