--- a/beasiswa/templates/mahasiswa.html
+++ b/beasiswa/templates/mahasiswa.html
@@ -65,7 +65,7 @@
         <div class="col-lg-12">
           <div class="card">
             <div class="card-body">
-                <button class="btn btn-primary mt-3"><a href="" style="color: white; text-decoration: ">Tambah Mahasiswa</a></button>
+                <button class="btn btn-primary mt-3"><a href="{% url 'tambah_mahasiswa' %}" style="color: white; text-decoration: ">Tambah Mahasiswa</a></button>
             </div>
           </div>
         </div>
