--- a/beasiswa/templates/mahasiswa.html
+++ b/beasiswa/templates/mahasiswa.html
@@ -99,7 +99,7 @@
                             <td>{{ mahasiswa.angkatan.angkatan }}</td>
                             <td>
                               <a href="{% url 'edit_mahasiswa' mahasiswa.id %}" class="btn btn-warning btn-sm"><i class="bi bi-pencil"></i> Edit</a>
-                              <form action="" method="post" style="display:inline;">
+                              <form action="{% url 'hapus_mahasiswa' mahasiswa.id %}" method="post" style="display:inline;">
                                   {% csrf_token %}
                                   <button type="submit" class="btn btn-danger btn-sm" onclick="return confirm('Apakah Anda yakin ingin menghapus data ini?');"><i class="bi bi-trash"></i> Hapus</button>
                                 </form>
